force-app/main/default/objects/Student_Session__c/Student_Session__c.object-meta.xml
<CustomObject>
    <label>Student Session</label>
    <nameField>
        <displayFormat>SS-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>