force-app/main/default/objects/Student_Session__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox will help invoice engine to ensure this session is billable or not</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>