force-app/main/default/objects/Student_Session__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Student Sessions</relationshipLabel>
    <relationshipName>Student_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>