force-app/main/default/objects/Student_Session__c/fields/Last_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify the record that is the last session record of the respective enrollment.</description>
    <label>Last Session</label>
    <type>Checkbox</type>
</CustomField>