force-app/main/default/objects/Student_Session__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Student Sessions</relationshipLabel>
    <relationshipName>Student_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>